Images/Style(Main->GRID)

--- a/index.html
+++ b/index.html
@@ -64,10 +64,70 @@
             </article>
         </section>
         <section class="main">
-
+            <figure class="portrait">
+                <img src="./assets/img/kirby.jpg" alt="">
+            </figure>
+            <figure>
+                <img src="./assets/img/kirby2.jpg" alt="">
+            </figure>
+            <figure>
+                <img src="./assets/img/pkm1.jpg" alt="">
+            </figure>
+            <figure class='paysage'>
+                <img src="./assets/img/pkm2.jpg" alt="">
+            </figure>
+            <figure>
+                <img src="./assets/img/mp1.jpg" alt="">
+            </figure>
+            <figure>
+                <img src="./assets/img/md1.jpg" alt="">
+            </figure>
+            <figure>
+                <img src="./assets/img/Ca1.jpg" alt="">
+            </figure>
+            <figure class=''>
+                <img src="./assets/img/AC1.jpg" alt="">
+            </figure>
+            <figure class=''>
+                <img src="./assets/img/AC2.jpg" alt="">
+            </figure>
+            <figure class="portrait">
+                <img src="./assets/img/NSO1.jpg" alt="">
+            </figure>
+            <figure>
+                <img src="./assets/img/SO1.jpg" alt="">
+            </figure>
+            <figure>
+                <img src="./assets/img/Chokobo1.jpg" alt="">
+            </figure>
+            <figure class='paysage'>
+                <img src="./assets/img/TS1.jpg" alt="">
+            </figure>
+            <figure class='portrait'>
+                <img src="./assets/img/MKT1.jpg" alt="">
+            </figure>
+            <figure>
+                <img src="./assets/img/ACPC1.jpg" alt="">
+            </figure>
+            <figure>
+                <img src="./assets/img/PikMin1.jpg" alt="">
+            </figure>
+            <figure class='paysage'>
+                <img src="./assets/img/FEH1.jpg" alt="">
+            </figure>
+            <figure  class='full'>
+                <img src="./assets/img/MYNIN1.jpg" alt="">
+            </figure>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="top">
+
+        </div>
+        <div class="bottom">
+
+        </div>
+    </footer>
 </body>
 
 </html>
