Keyframes .main anim

--- a/index.html
+++ b/index.html
@@ -120,81 +120,169 @@
                 <img src="./assets/img/MYNIN1.jpg" alt="">
             </figure>
         </section>
+        <!---->
         <section class='news'>
-            <article>
+            <article class='cat'>
                 <h3>Dernières news</h3>
             </article>
             <article>
-                <img src="./assets/img/news/" alt="">
-                <h3>Les téléchargements de la semaine</h3>
-                <p>12/01/2022 | Nintendo Switch</p>
-                <p>ASTRONEER et 26 autres jeux sortent cette semaine.</p>
+                <img src="./assets/img/news/eshop.jpg" alt="">
+                <div>
+                    <h3>Les téléchargements de la semaine</h3>
+                    <p>12/01/2022 | Nintendo Switch</p>
+                    <p>ASTRONEER et 26 autres jeux sortent cette semaine.</p>
+                </div>
             </article>
             <article>
-                <img src="./assets/img/news/" alt="">
+                <img src="./assets/img/news/MD1.jpg" alt="">
+                <div>
+                    <h3>Rapports Metroid Dread, Vol. 11 : conseils utiles pour maîtriser l'exploration et les combats</h3>
+                    <p>11/01/2022 | Nintendo Switch</p>
+                    <p>Voici quelques conseils d'expert pour améliorer vos capacités sur la planète ZDR</p>
+                </div>
             </article>
             <article>
-                <img src="./assets/img/news/" alt="">
+                <img src="./assets/img/news/eshop.jpg" alt="">
+                <div>
+                    <h3>Les téléchargements de la semaine</h3>
+                    <p>07/01/2022 | Nintendo Switch</p>
+                    <p>DEMON GAZE EXTRA et 29 autres jeux sortent cette semaine.</p>
+                </div>
             </article>
             <article>
-                <img src="./assets/img/news/" alt="">
+                <img src="./assets/img/news/MKD1.jpg" alt="">
+                <div>
+                    <h3>Règlement Jeu « Concours Mario Kart x Hot Wheels “Route arc-en-ciel” – page Facebook Mario Kart »</h3>
+                    <p>29/12/2021 | Nintendo Switch</p>
+                    <p>La société Nintendo France organise un jeu intitulé « Concours Mario Kart x Hot Wheels “Route arc-en-ciel” – page Facebook Mario Kart » du 29 décembre au 31 décembre 2021 inclus.</p>
+                </div>
             </article>
             <article>
-                <img src="./assets/img/news/" alt="">
+                <img src="./assets/img/news/eshop.jpg" alt="">
+                <div>
+                    <h3>Les téléchargements de la semaine</h3>
+                    <p>23/12/2021 | Nintendo Switch</p>
+                    <p>Twelve Minutes et 23 autres jeux sortent cette semaine.</p>
+                </div>
             </article>
             <article>
-                <img src="./assets/img/news/" alt="">
+                <img src="./assets/img/news/SM1.png" alt="">
+                <div>
+                    <h3>Règlement Jeu « Concours LEGO x Super Mario – Twitter Nintendo France »</h3>
+                    <p>21/12/2021 | Nintendo Switch</p>
+                    <p>La société Nintendo France organise un jeu intitulé « Concours LEGO x Super Mario – Twitter Nintendo France » du mardi 21 décembre 2021 au jeudi 23 décembre 2021 inclus.</p>
+                </div>
             </article>
             <article>
-                <img src="./assets/img/news/" alt="">
+                <img src="./assets/img/news/OLED1.jpg" alt="">
+                <div>
+                    <h3>Vous venez de recevoir une Nintendo Switch ? Découvrez certaines fonctionnalités clés de votre console !</h3>
+                    <p>21/12/2021 | Nintendo Switch</p>
+                    <p>Prenez des captures d'écran et des vidéos, jouez en ligne, parcourez le Nintendo eShop et bien plus !</p>
+                </div>
             </article>
             <article>
-                <img src="./assets/img/news/" alt="">
+                <img src="./assets/img/news/SMASH1.jpg" alt="">
+                <div>
+                    <h3>Les résultats du nouveau Super Smash Bros. Ultimate European Online Challenge sont tombés !</h3>
+                    <p>20/12/2021 | Nintendo Switch</p>
+                    <p>Êtes-vous dans le top 100 ?</p>
+                </div>
             </article>
             <article>
-                <img src="./assets/img/news/" alt="">
+                <img src="./assets/img/news/MULTI1.jpg" alt="">
+                <div>
+                    <h3>Essayez gratuitement Metroid Dread, Cérébrale Académie : bataille de méninges et bien d'autres jeux sur Nintendo Switch !</h3>
+                    <p>20/12/2021 | Nintendo Switch</p>
+                    <p>Découvrez les démos gratuites et à les jeux free-to-start disponibles sur le Nintendo eShop</p>
+                </div>
             </article>
             <article>
-                <img src="./assets/img/news/" alt="">
+                <img src="./assets/img/news/ACNH1.jpg" alt="">
+                <div>
+                    <h3>Règlement Jeu « Concours de Noël Animal Crossing : New Horizons – Instagram @NintendoSwitchFR »</h3>
+                    <p>17/12/2021 | Nintendo Switch</p>
+                    <p>La société Nintendo France organise un jeu intitulé « Concours de Noël Animal Crossing : New Horizons – Instagram @NintendoSwitchFR » sur la période du 17 décembre au 22 décembre 2021 inclus.</p>
+                </div>
+            </article>
+            <article class='cat'>
+                <h3>PLUS DE NEWS</h3>
+            </article>
+            <article class='cat'>
+                <h3>Bientôt disponible</h3>
             </article>
             <article>
-                <img src="./assets/img/news/" alt="">
+                <img src="./assets/img/news/ASNEER1.jpg" alt="">
+                <div>
+                    <h3>ASTRONEER</h3>
+                    <p>13/01/2022</p>
+                    <p>Version téléchargeable (Nintendo Switch)</p>
+                </div>
             </article>
             <article>
-                <img src="./assets/img/news/" alt="">
+                <img src="./assets/img/news/AERY1.jpg" alt="">
+                <div>
+                    <h3>Aery - Dreamscape</h3>
+                    <p>13/01/2022</p>
+                    <p>Jeux à télécharger sur Nintendo Switch</p>
+                </div>
             </article>
             <article>
-                <img src="./assets/img/news/" alt="">
+                <img src="./assets/img/news/ER1.jpg" alt="">
+                <div>
+                    <h3>Eternal Radiance</h3>
+                    <p>13/01/2022</p>
+                    <p>Jeux à télécharger sur Nintendo Switch</p>
+                </div>
             </article>
             <article>
-                <img src="./assets/img/news/" alt="">
+                <img src="./assets/img/news/TFM1.jpg" alt="">
+                <div>
+                    <h3>Teamfight Manager</h3>
+                    <p>13/01/2022</p>
+                    <p>Jeux à télécharger sur Nintendo Switch</p>
+                </div>
+            </article>
+            <article class='cat'>
+                <h3>VOIR TOUS LES JEUX À VENIR</h3>
+            </article>
+            <article class='cat'>
+                <h3>Sorties récentes</h3>
             </article>
             <article>
-                <img src="./assets/img/news/" alt="">
+                <img src="./assets/img/news/SKZ1.jpg" alt="">
+                <div>
+                    <h3>Sudoku Zenkai</h3>
+                    <p>13/01/2022</p>
+                    <p>Jeux à télécharger sur Nintendo Switch</p>
+                </div>
             </article>
             <article>
-                <img src="./assets/img/news/" alt="">
+                <img src="./assets/img/news/NOVA1.jpg" alt="">
+                <div>
+                    <h3>hocus 2</h3>
+                    <p>13/01/2022</p>
+                    <p>Jeux à télécharger sur Nintendo Switch</p>
+                </div>
             </article>
             <article>
-                <img src="./assets/img/news/" alt="">
+                <img src="./assets/img/news/HOCUS1.jpg" alt="">
+                <div>
+                    <h3>Headland</h3>
+                    <p>13/01/2022</p>
+                    <p>Jeux à télécharger sur Nintendo Switch</p>
+                </div>
             </article>
             <article>
-                <img src="./assets/img/news/" alt="">
+                <img src="./assets/img/news/HEAD1.jpg" alt="">
+                <div>
+                    <h3></h3>
+                    <p>11/01/2022 | Nintendo Switch</p>
+                    <p></p>
+                </div>
             </article>
-            <article>
-                <img src="./assets/img/news/" alt="">
-            </article>
-            <article>
-                <img src="./assets/img/news/" alt="">
-            </article>
-            <article>
-                <img src="./assets/img/news/" alt="">
-            </article>
-            <article>
-                <img src="./assets/img/news/" alt="">
-            </article>
-            <article>
-                <img src="./assets/img/news/" alt="">
+            <article class='cat'>
+                <h3>VOIR TOUTES LES NOUVEAUTÉS</h3>
             </article>
         </section>
     </main>
