--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </article>
             <article>
                 <svg xmlns="http://www.w3.org/2000/svg" height="2em" width="2em" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve"><g class="nav-icon-switch"><path d="M18.9,32h4.9c4.5,0,8.2-3.7,8.2-8.2v0V8.2C32,3.7,28.3,0,23.8,0c0,0,0,0,0,0h-5c-0.1,0-0.2,0.1-0.2,0.2c0,0,0,0,0,0v31.6C18.6,31.9,18.7,32,18.9,32z M25,14.4c1.8,0,3.2,1.5,3.2,3.2c0,1.8-1.5,3.2-3.2,3.2c-1.8,0-3.2-1.4-3.2-3.2C21.7,15.8,23.2,14.4,25,14.4C25,14.4,25,14.4,25,14.4z M15.2,0h-7C3.7,0,0,3.7,0,8.2v15.6C0,28.3,3.7,32,8.2,32h7c0.1,0,0.2-0.1,0.2-0.2l0,0V0.2C15.4,0.1,15.3,0,15.2,0C15.2,0,15.2,0,15.2,0z M12.9,29.4H8.2c-3.1,0-5.6-2.5-5.6-5.6V8.2c0-3.1,2.5-5.6,5.6-5.6h4.6L12.9,29.4z M5,9.6c0,1.7,1.3,3,3,3s3-1.3,3-3s-1.3-3-3-3S5,7.9,5,9.6L5,9.6z"></path></g></svg>
-                <p>Nintendo Online</p>
+                <p>Nintendo Switch Online</p>
             </article>
             <article>
                 <svg xmlns="http://www.w3.org/2000/svg" height="2em" width="2em" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 539.07 511.98" enable-background="new 0 0 539.07 511.98" xml:space="preserve"><g><path d="M477.05,152.88l20.66,320.34H41.35L62,152.88h415m36.35-38.77H25.67L0,512H539.07L513.4,114.11ZM382.27,226.63V77.72A77.73,77.73,0,0,0,304.54,0h-70A77.73,77.73,0,0,0,156.8,77.72V226.63a2.77,2.77,0,0,0,2.77,2.77h33.24a2.77,2.77,0,0,0,2.76-2.77V77.72a39,39,0,0,1,39-39h70a39,39,0,0,1,38.95,39V226.63a2.77,2.77,0,0,0,2.77,2.77H379.5A2.77,2.77,0,0,0,382.27,226.63Z"></path></g></svg>
@@ -288,7 +288,7 @@
     </main>
     <footer>
         <div class="social">
-            <p>PARTAGER SUR:</p>
+            <p><strong>PARTAGER SUR :</strong></p>
             <div class='facebook'>
                 <i class="fab fa-facebook-f"></i>
                 <p>Facebook</p>
