--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="icon" type="image/png" href="./assets/img/Ph03nyx-Super-Mario-Retro-Mario.ico" />
-    <title>Nintendoilsh</title>
+    <title>Site officiel de Nintendo</title>
 </head>
 
 <body>
@@ -17,19 +17,19 @@
         <nav>
             <ul>
                 <li>
-                    <i class="fas fa-search"></i>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="2em" width="2em" viewBox="0 0 512 512" class="pla-svg-icon plo-header__nav-icon"><path d="M302.29-.49c-116,.31-209.79,94.6-209.48,210.6a210.06,210.06,0,0,0,45.81,130.38L7.17,471.57a23.46,23.46,0,0,0,16.58,39.92A23.13,23.13,0,0,0,40,504.83L171.49,373.77c90.71,72.29,222.85,57.37,295.14-33.34S524,117.59,433.3,45.3A210,210,0,0,0,302.29-.49Zm0,376.91a166.84,166.84,0,1,1,166.7-167v.33A166.92,166.92,0,0,1,302.29,376.42Z"></path></svg>
                     <p>Recherche</p>
                 </li>
                 <li>
-                    <i class="far fa-heart"></i>
-                    <p>Liste de souhaits</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="2em" width="2em" viewBox="0 0 512 512" class="pla-svg-icon plo-header__nav-icon"><path d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"></path></svg>
+                    <p>Liste de so...</p>
                 </li>
                 <li>
-                    <i class="fas fa-shopping-cart"></i>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="2em" width="2.5em" viewBox="0 0 649 512" class="pla-svg-icon plo-header__nav-icon"><path d="M437.94,471.6a39.9,39.9,0,1,1,39.9,39.9,39.9,39.9,0,0,1-39.9-39.9Zm-228.15,0a39.9,39.9,0,1,1,39.9,39.9A39.9,39.9,0,0,1,209.79,471.6Zm-5.89-77.42a25.34,25.34,0,0,1-23.77-16.81c-3-8.3-114.74-327.69-114.74-327.69H25A25.09,25.09,0,0,1,25-.5H81a29.5,29.5,0,0,1,19.48,7.31A38.6,38.6,0,0,1,108,19.61l9.25,26.45H623a25,25,0,0,1,23.94,32.6c-2.58,9-45.9,156.07-47.29,160.91a25,25,0,0,1-24.16,18H191.32l30.28,86.51h300a25.09,25.09,0,0,1,0,50.18H203.9ZM173.75,207.32h383L589.46,96.23H134.85Z"></path></svg>
                     <p>Panier</p>
                 </li>
                 <li>
-                    <i class="fas fa-user"></i>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="2em" width="2em" viewBox="0 0 448 512" class="pla-svg-icon plo-header__nav-icon"><path d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"></path></svg>
                     <p>Connexion</p>
                 </li>
             </ul>
@@ -37,7 +37,7 @@
     </header>
     <main>
         <section class="aside">
-            <article>
+            <article class='corner'>
                 <svg xmlns="http://www.w3.org/2000/svg" height="2em" width="2em" viewBox="0 0 576 512" class="pla-svg-icon main-navigation-icon"><path d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"></path></svg>
                 <p>Jeux</p>
                 <ul>
@@ -55,7 +55,7 @@
                     <li><p>L'univers Nintendo</p></li>
                 </ul>
             </article>
-            <article>
+            <article class='corner'>
                 <svg xmlns="http://www.w3.org/2000/svg" height="2em" width="2em" viewBox="0 0 30 30" class="pla-svg-icon main-navigation-icon"><path d="M28.235 20.294h-7.941v7.941A1.77 1.77 0 0 1 18.529 30h-7.058a1.77 1.77 0 0 1-1.765-1.765v-7.941H1.765A1.77 1.77 0 0 1 0 18.529v-7.058a1.77 1.77 0 0 1 1.765-1.765h7.941V1.765A1.77 1.77 0 0 1 11.471 0h7.059a1.77 1.77 0 0 1 1.765 1.765v7.941h7.941A1.77 1.77 0 0 1 30 11.471v7.059a1.77 1.77 0 0 1-1.765 1.764zM7.059 14.118h-3.53a.882.882 0 0 0 0 1.765h3.53a.882.882 0 0 0 0-1.765zm8.823-10.589a.882.882 0 1 0-1.765 0v3.53a.882.882 0 1 0 1.765 0zm0 19.412a.882.882 0 0 0-1.765 0v3.529a.882.882 0 1 0 1.765 0zm10.588-8.824h-3.529a.882.882 0 1 0 0 1.765h3.529a.882.882 0 0 0 0-1.765z"></path></svg>
                 <p>Hardware</p>
                 <ul>
@@ -75,7 +75,7 @@
                     <li><p>L'Histoire de Nintendo</p></li>
                 </ul>
             </article>
-            <article>
+            <article class='corner'>
                 <svg xmlns="http://www.w3.org/2000/svg" height="2em" width="2em" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve"><g class="nav-icon-switch"><path d="M18.9,32h4.9c4.5,0,8.2-3.7,8.2-8.2v0V8.2C32,3.7,28.3,0,23.8,0c0,0,0,0,0,0h-5c-0.1,0-0.2,0.1-0.2,0.2c0,0,0,0,0,0v31.6C18.6,31.9,18.7,32,18.9,32z M25,14.4c1.8,0,3.2,1.5,3.2,3.2c0,1.8-1.5,3.2-3.2,3.2c-1.8,0-3.2-1.4-3.2-3.2C21.7,15.8,23.2,14.4,25,14.4C25,14.4,25,14.4,25,14.4z M15.2,0h-7C3.7,0,0,3.7,0,8.2v15.6C0,28.3,3.7,32,8.2,32h7c0.1,0,0.2-0.1,0.2-0.2l0,0V0.2C15.4,0.1,15.3,0,15.2,0C15.2,0,15.2,0,15.2,0z M12.9,29.4H8.2c-3.1,0-5.6-2.5-5.6-5.6V8.2c0-3.1,2.5-5.6,5.6-5.6h4.6L12.9,29.4z M5,9.6c0,1.7,1.3,3,3,3s3-1.3,3-3s-1.3-3-3-3S5,7.9,5,9.6L5,9.6z"></path></g></svg>
                 <p>Nintendo Switch Online</p>
                 <ul>
@@ -91,7 +91,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" height="2em" width="2em" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 539.07 511.98" enable-background="new 0 0 539.07 511.98" xml:space="preserve"><g><path d="M477.05,152.88l20.66,320.34H41.35L62,152.88h415m36.35-38.77H25.67L0,512H539.07L513.4,114.11ZM382.27,226.63V77.72A77.73,77.73,0,0,0,304.54,0h-70A77.73,77.73,0,0,0,156.8,77.72V226.63a2.77,2.77,0,0,0,2.77,2.77h33.24a2.77,2.77,0,0,0,2.76-2.77V77.72a39,39,0,0,1,39-39h70a39,39,0,0,1,38.95,39V226.63a2.77,2.77,0,0,0,2.77,2.77H379.5A2.77,2.77,0,0,0,382.27,226.63Z"></path></g></svg>
                 <p>Nintendo eShop</p>
             </article>
-            <article>
+            <article class='corner'>
                 <svg xmlns="http://www.w3.org/2000/svg" height="2em" width="2em" viewBox="0 0 41 30" class="pla-svg-icon main-navigation-icon"><path d="M31.742 8.257A15.455 15.455 0 0 0 17.95.001c-6.905 0-14.047 4.607-14.047 12.316a8.747 8.747 0 0 0 4.826 7.718 1.532 1.532 0 0 0 2-.671l2.647-4.947 1.916 3.76a1.54 1.54 0 0 0 2.739 0l1.9-3.738 2.589 4.916a1.537 1.537 0 1 0 2.718-1.434l-3.97-7.541a1.558 1.558 0 0 0-1.37-.821 1.533 1.533 0 0 0-1.356.838l-1.88 3.694-1.882-3.69a1.534 1.534 0 0 0-2.721-.026L8.83 16.401a5.4 5.4 0 0 1-1.854-4.086c0-5.781 5.579-9.236 10.978-9.236a12.512 12.512 0 0 1 11.463 7.374 1.543 1.543 0 0 0 1.488.874 1.349 1.349 0 0 1 .229 0h.123A6.624 6.624 0 0 1 35.8 22.633a6.6 6.6 0 0 1-4.75 1.937 6.5 6.5 0 0 1-3.659-1.161 1.531 1.531 0 0 0-1.885.009 16.937 16.937 0 0 1-22.793-1.99 1.54 1.54 0 1 0-2.352 1.986 20.033 20.033 0 0 0 14.807 6.587 19.874 19.874 0 0 0 11.344-3.5 9.912 9.912 0 0 0 4.531 1.156 9.666 9.666 0 0 0 9.763-9.775 9.756 9.756 0 0 0-9.067-9.62z"></path></svg>
                 <p>My Nintendo Store</p>
                 <ul>
@@ -108,7 +108,7 @@
             <article>
                 <svg xmlns="http://www.w3.org/2000/svg" height="2em" width="2em" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 128 128" enable-background="new 0 0 400 400" xml:space="preserve"><g><path d="M32.43,100.85H4.88A4.55,4.55,0,0,1,.34,96.32v-2c0-13.15,5.58-24.45,12.44-29.39A14.19,14.19,0,0,1,8.07,54.2c0-7.56,5.58-13.7,12.47-13.7S33,46.63,33,54.2a14.21,14.21,0,0,1-4.71,10.72,23.33,23.33,0,0,1,5,5,6.7,6.7,0,0,1,1,5.93,58.38,58.38,0,0,0-2.38,16.6A66.94,66.94,0,0,0,32.43,100.85Z"></path><path d="M95.83,100.85h27a4.84,4.84,0,0,0,4.84-4.66q0-.94,0-1.88c0-13.15-5.58-24.45-12.44-29.38a14.19,14.19,0,0,0,4.72-10.73c0-7.56-5.59-13.7-12.48-13.71S95,46.63,95,54.2a14.21,14.21,0,0,0,4.71,10.72,23.25,23.25,0,0,0-4.89,4.89A6.93,6.93,0,0,0,93.75,76,58.4,58.4,0,0,1,96.1,92.43a67,67,0,0,1-.49,8.16A.22.22,0,0,0,95.83,100.85Z"></path><path d="M52.57,55.72a1.65,1.65,0,0,0,.14-2.38,18.46,18.46,0,0,1-4.77-12.55c0-9.74,7.19-17.64,16.06-17.64s16.06,7.9,16.06,17.64a18.49,18.49,0,0,1-4.77,12.55,1.65,1.65,0,0,0,.14,2.38C83.59,62.56,90,76.44,90,92.43a67,67,0,0,1-.48,8.08.38.38,0,0,1-.38.33H38.86a.38.38,0,0,1-.38-.33A67,67,0,0,1,38,92.43C38,76.43,44.41,62.56,52.57,55.72Z"></path></g></svg>
             </article>
-            <article>
+            <article class='corner'>
                 <p>...</p>
                 <ul>
                     <li><h2>News</h2></li>
@@ -122,6 +122,9 @@
                     <li><p>Nintendo Kids</p></li>
                     <li><p>Plan du site</p></li>
                 </ul>
+            </article>
+            <article class="arrow">
+                <i class="fas fa-chevron-up"></i>
             </article>
         </section>
         <section class="main">
